--- a/src/libEGL/libEGL_winrt.vcxproj.filters
+++ b/src/libEGL/libEGL_winrt.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="Surface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\common\winrt\ThreadEmulation.cpp">
+    <ClCompile Include="..\common\winrtutils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -61,10 +61,13 @@
     <ClInclude Include="..\common\version.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\common\winrt\ThreadEmulation.h">
+    <ClInclude Include="..\common\winrtutils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\common\winrt\threadutils.h">
+    <ClInclude Include="..\common\debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\angleutils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
