--- a/src/compiler/translator_hlsl_winrt_2013.vcxproj
+++ b/src/compiler/translator_hlsl_winrt_2013.vcxproj
@@ -96,31 +96,37 @@
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Configuration)\hlsl\</IntDir>
     <TargetName>translator_hlsl</TargetName>
+    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Configuration)\hlsl\</IntDir>
     <TargetName>translator_hlsl</TargetName>
+    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
     <TargetName>translator_hlsl</TargetName>
+    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
     <TargetName>translator_hlsl</TargetName>
+    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
     <TargetName>translator_hlsl</TargetName>
+    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
     <TargetName>translator_hlsl</TargetName>
+    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
